--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do-list</title>
-</head>
-<body>
-    <h1>Hello Ochuba</h1>
-</body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
+  <body>
+    <section>
+       <div class="title">
+        <h1>Today's To Do</h1>
+        <button class="autorenew">
+          <span class="material-symbols-outlined"> autorenew </span>
+        </button>
+      </div>
+
+      <div class="add-list">
+      <form action="">
+        <input placeholder="Add to your list..." id="add-task" />
+      </form>
+    <span class="material-symbols-outlined"> subdirectory_arrow_left </span>
+    </div>
+    <div class="btn-clear">
+      <button>Clear all completed</button>
+    </div>
+    
+    </section>
+  </body>
 </html>
