Test edit and update

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
       <div class="add-list">
       <form action="">
-        <input placeholder="Add to your list..." id="add-task" />
+        <input required placeholder="Add to your list..." id="add-task" />
       </form>
     <span id="add-btn" class="material-symbols-outlined"> subdirectory_arrow_left </span>
     </div>
